--- a/edit-profile.html
+++ b/edit-profile.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="css/animate.css" />
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/fonts.css" />
+<link rel="stylesheet" type="text/css" href="./fonts/icon/icon.css" />
 <link rel="stylesheet" type="text/css" href="css/flaticon.css" />
 <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
@@ -29,103 +30,140 @@
 </head>
 
 <body>
-<div class="jb_preloader">
-  <div class="spinner_wrap">
-    <div class="spinner"></div>
+  <div class="jb_preloader">
+    <div class="spinner_wrap">
+      <div class="spinner"></div>
+    </div>
   </div>
-</div>
-<div class="cursor"></div>
-<a href="javascript:" id="return-to-top"><i class="fas fa-angle-double-up"></i></a>
-<nav class="cd-dropdown  d-block d-sm-block d-md-block d-lg-none d-xl-none">
-  <h2><a href="index.html"> <span><img src="images/logo.png" alt="img"></span></a></h2>
-  <a href="#0" class="cd-close">Close</a>
-  <ul class="cd-dropdown-content">
-    <li ><a href="index.html">Home</a> </li>
-    <li ><a href="#">About</a> </li>
-    <li><a href="">Pricing</a></li>
-    <li><a href="">How it works</a></li>
-    <li><a href="login.html">Login</a></li>
-  </ul>
-</nav>
-<div class="cp_navi_main_wrapper jb_cover">
-  <div class="container-fluid">
-    <div class="cp_logo_wrapper"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a> </div>
-    <header class="mobail_menu d-block d-sm-block d-md-block d-lg-none d-xl-none">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="cd-dropdown-wrapper"> <a class="house_toggle" href="#0">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 31.177 31.177" style="enable-background:new 0 0 31.177 31.177;" xml:space="preserve" width="25px" height="25px">
-                <g>
-                  <g>
-                    <path class="menubar" d="M30.23,1.775H0.946c-0.489,0-0.887-0.398-0.887-0.888S0.457,0,0.946,0H30.23    c0.49,0,0.888,0.398,0.888,0.888S30.72,1.775,30.23,1.775z" fill="#004165" />
-                  </g>
-                  <g>
-                    <path class="menubar" d="M30.23,9.126H12.069c-0.49,0-0.888-0.398-0.888-0.888c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,8.729,30.72,9.126,30.23,9.126z" fill="#004165" />
-                  </g>
-                  <g>
-                    <path class="menubar" d="M30.23,16.477H0.946c-0.489,0-0.887-0.398-0.887-0.888c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,16.079,30.72,16.477,30.23,16.477z" fill="#004165" />
-                  </g>
-                  <g>
-                    <path class="menubar" d="M30.23,23.826H12.069c-0.49,0-0.888-0.396-0.888-0.887c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,23.43,30.72,23.826,30.23,23.826z" fill="#004165" />
-                  </g>
-                  <g>
-                    <path class="menubar" d="M30.23,31.177H0.946c-0.489,0-0.887-0.396-0.887-0.887c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.398,0.888,0.888C31.118,30.78,30.72,31.177,30.23,31.177z" fill="#004165" />
-                  </g>
-                </g>
-              </svg>
-              </a> </div>
+  <div class="cursor"></div>
+  <a href="javascript:" id="return-to-top"><i class="fas fa-angle-double-up"></i></a>
+  <nav class="cd-dropdown  d-block d-sm-block d-md-block d-lg-none d-xl-none">
+    <h2><a href="index.html"> <span><img src="images/logo.png" alt="img"></span></a></h2>
+    <a href="#0" class="cd-close">Close</a>
+    <ul class="cd-dropdown-content">
+      <li><a href="index.html">Home</a> </li>
+      <li><a href="#">About</a> </li>
+      <li><a href="">Pricing</a></li>
+      <li><a href="">How it works</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
+  <div class="cp_navi_main_wrapper jb_cover dashboard_header">
+    <div class="container-fluid">
+      <div class="cp_logo_wrapper"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a> </div>
+      <header class="mobail_menu d-block d-sm-block d-md-block d-lg-none d-xl-none">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="cd-dropdown-wrapper"> <a class="house_toggle" href="#0">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                    id="Capa_1" x="0px" y="0px" viewBox="0 0 31.177 31.177"
+                    style="enable-background:new 0 0 31.177 31.177;" xml:space="preserve" width="25px" height="25px">
+                    <g>
+                      <g>
+                        <path class="menubar"
+                          d="M30.23,1.775H0.946c-0.489,0-0.887-0.398-0.887-0.888S0.457,0,0.946,0H30.23    c0.49,0,0.888,0.398,0.888,0.888S30.72,1.775,30.23,1.775z"
+                          fill="#004165" />
+                      </g>
+                      <g>
+                        <path class="menubar"
+                          d="M30.23,9.126H12.069c-0.49,0-0.888-0.398-0.888-0.888c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,8.729,30.72,9.126,30.23,9.126z"
+                          fill="#004165" />
+                      </g>
+                      <g>
+                        <path class="menubar"
+                          d="M30.23,16.477H0.946c-0.489,0-0.887-0.398-0.887-0.888c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,16.079,30.72,16.477,30.23,16.477z"
+                          fill="#004165" />
+                      </g>
+                      <g>
+                        <path class="menubar"
+                          d="M30.23,23.826H12.069c-0.49,0-0.888-0.396-0.888-0.887c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,23.43,30.72,23.826,30.23,23.826z"
+                          fill="#004165" />
+                      </g>
+                      <g>
+                        <path class="menubar"
+                          d="M30.23,31.177H0.946c-0.489,0-0.887-0.396-0.887-0.887c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.398,0.888,0.888C31.118,30.78,30.72,31.177,30.23,31.177z"
+                          fill="#004165" />
+                      </g>
+                    </g>
+                  </svg>
+                </a> </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="jb_navigation_wrapper">
+        <div class="mainmenu d-xl-block d-lg-block d-md-none d-sm-none d-none">
+          <ul class="main_nav_ul">
+            <li><a href="#" class="gc_main_navigation active_class">Home</a></li>
+            <li><a href="#" class="gc_main_navigation">About</a></li>
+            <li> <a href="#" class="gc_main_navigation"> Pricing</a></li>
+            <li><a href="#" class="gc_main_navigation">How it works</a></li>
+            <li><a href="#" class="notification_nav" role="button" data-toggle="dropdown" aria-expanded="false">
+              <span class="notification_count">2</span>
+              <i class="icon-bell"></i>
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="user_profile">
+        <spna  class="d-flex link-body-emphasis text-decoration-none" role="button" data-toggle="dropdown" aria-expanded="false" >
+          <img src="./images/user-img.png" alt="mdo" width="50" height="50" class="rounded-circle">
+          <div class="user-content text-start">
+          <span>Anthony Smith</span>
+          <p class="mb-0">Company Name</p>
+          </div>
+        </span>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Title Section Start -->
+<div class="page_title_section dashbord_title">
+  <div class="page_header">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 col-md-8 col-12 col-sm-7 align-items-center d-flex">
+          <div class="left_menu_icon" id="left_menu_icon"></div>
+          <h1>Dashboard</h1>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 col-sm-5">
+          <div class="sub_title_section">
+            <ul class="sub_title">
+              <li> <a href="#"> Home </a>&nbsp; / &nbsp; </li>
+              <li>Dashboard</li>
+            </ul>
           </div>
         </div>
       </div>
-    </header>
-    <div class="menu_btn_box header_btn jb_cover">
-      <ul>
-        <li> <a href="register.html" class=" d-xl-block d-lg-block d-md-none d-sm-none d-none">Start a trial</a> </li>
-        <li> <a href="login.html"> <i class="flaticon-login"></i> Login</a> </li>
-      </ul>
-    </div>
-    <div class="jb_navigation_wrapper">
-      <div class="mainmenu d-xl-block d-lg-block d-md-none d-sm-none d-none">
-        <ul class="main_nav_ul">
-          <li><a href="#" class="gc_main_navigation active_class">Home</a></li>
-          <li><a href="#" class="gc_main_navigation">About</a></li>
-          <li > <a href="#" class="gc_main_navigation"> Pricing</a></li>
-          <li><a href="#" class="gc_main_navigation">How it works</a></li>
-        </ul>
-      </div>
     </div>
   </div>
 </div>
-
-<!-- Title Section Start -->
-<section class="page_title">
-  <div class="container">
-    <div class="row">
-      <div class="left_menu_icon" id="left_menu_icon"></div>
-      <div class="col-lg-9">
-        <h2 class="title">Dashboard</h2>
-      </div>
-      <div class="col-lg-3">
-        <span><a href="index.html" class="link">Home</a> / Edit Profile</span>
-      </div>
-    </div>
-  </div>
-</section>
 <!-- Title Section End -->
 <!-- Dashboard Inner Content Section Start -->
 <section class="dashboard_inner_content">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-xl-3 col-lg-4 ">
         <div class="left_menu" id="left_menu">
-          <div class="close_menu" id="close-icon">X</div>
+          <div class="close_menu" id="close-icon"><i class="uil uil-times"></i></div>
           <div class="feature_box text-center border-bottom-0">
             <div class="media_div mb-3">
               <img src="./images/user-profile-default.jpg" alt="profile-img">
             </div>
             <h3>Club Name</h3>
-            <div class="progress_div" >
+            <div class="progress_div">
               <span>profile</span>
               <span>70%</span>
               <span class="progress" style="width: 70%;">&nbsp;</span>
@@ -133,68 +171,67 @@
           </div>
           <div class="feature_box pt-0">
             <ul class="menu-list" id="drop_menu">
-              <li><a class="link" href="#"><i class="fas fa-tachometer-alt"></i></i> Dashboard</a></li>
-              <li><a class="link" href="#"><i class="fas fa-edit"></i> Profile</a></li>
-              <li><a class="link" href="#"><i class="fas fa-user-plus"></i> Users</a></li>
+              <li><a class="link" href="#"><i class="icon-dashboard"></i> Dashboard</a></li>
+              <li><a class="link" href="#"><i class="icon-profile"></i> Profile</a></li>
               <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-suitcase"></i> Memberships</span>
+                <span class="link drop_link"><i class="icon-membership"></i></i> Memberships</span>
                 <ul class="submenu dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Add New Members</a></li>
-                  <li><a class="dropdown-item" href="#">All Members</a></li>
+                  <li><a class="dropdown-item" href="#">Membership Plans</a></li>
+                  <li><a class="dropdown-item" href="#">Members</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-tag"></i> Events</span>
+                <span class="link drop_link"><i class="icon-events"></i> Events</span>
                 <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="#">Add New Event</a></li>
                   <li><a class="dropdown-item" href="#">All Events</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                
-                <span class="link drop_link" ><i class="fas fa-envelope"></i> Club</span>
+
+                <span class="link drop_link"><i class="icon-shop"></i> Club/Shop</span>
                 <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="#">Add New Club</a></li>
                   <li><a class="dropdown-item" href="#">All Club</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-city"></i> Facility</span>
+                <span class="link drop_link"><i class="icon-facility"></i> Facility</span>
                 <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="#">All Facility</a></li>
                 </ul>
               </li>
               <!-- <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-chart-bar"></i> Finance</span>
-                <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                </ul>
-              </li> -->
+              <span class="link drop_link" ><i class="fas fa-chart-bar"></i> Finance</span>
+              <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+              </ul>
+            </li> -->
               <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-globe"></i> Web Pages</span>
+                <span class="link drop_link"><i class="icon-file"></i> Web Pages</span>
                 <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="#">Home</a></li>
                   <li><a class="dropdown-item" href="#">About us</a></li>
                   <li><a class="dropdown-item" href="#">Pricing</a></li>
                 </ul>
               </li>
-              <li><a class="link" href="#"><i class="fas fa-building"></i> Company Preview</a></li>
+              <li><a class="link" href="#"><i class="icon-company"></i> Company Preview</a></li>
             </ul>
           </div>
           <div class="feature_box border-bottom-0">
             <ul class="menu-list">
-              <li><a href="#"><i class="fas fa-key"></i> Change Password</a></li>
-              <li><a href="#"><i class="fas fa-power-off"></i> Log out</a></li>
-              <li><a href="#"><i class="fas fa-trash-alt"></i> Delete Account</a></li>
+              <li><a href="#"><i class="icon-key"></i> Change Password</a></li>
+              <li><a href="#"><i class="icon-power-off"></i> Log out</a></li>
+              <li><a href="#"><i class="icon-delete"></i> Delete Account</a></li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="col-lg-9">
+      <div class="col-xl-9 col-lg-8">
         <div class="right_menu">
-          <form>
+          <form class="dashboard_form">
             <div class="feature_box border-bottom-0">
               <div class="media_div userprofile">
                 <img id="perview_userprofile" src="./images/size-500-500.jpg" alt="profile-upload-image">
@@ -230,7 +267,7 @@
                 <div class="col-lg-6">
                   <div class="form-group comments_form">
                     <label class="form-label">Club Type</label>
-                    <select class="form-control form-select" aria-label="Default select example">
+                    <select class="form-control form-select w-100" aria-label="Default select example">
                       <option selected>Sports</option>
                       <option value="1">One</option>
                       <option value="2">Two</option>
@@ -310,9 +347,8 @@
                 </div>
               </div>
             </div>
-            <div class="button_div float-end header_btn search_btn jb_cover">
-              <button class="btn" type="submit">Save Changes</button>
-            </div>
+            <div class="button_div float-end mt-30"><button type="submit" class="btn btn-50">Save Changes</button></div>
+            
           </form>
         </div>
       </div>
