--- a/membership-plans.html
+++ b/membership-plans.html
@@ -15,6 +15,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/fullcalendar.css" />
   <link rel="stylesheet" type="text/css" href="css/icons.css" />
+  <link rel="stylesheet" type="text/css" href="./fonts/icon/icon.css" />
   <link rel="stylesheet" type="text/css" href="css/animate.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -107,17 +108,21 @@
             <li><a href="#" class="gc_main_navigation">About</a></li>
             <li> <a href="#" class="gc_main_navigation"> Pricing</a></li>
             <li><a href="#" class="gc_main_navigation">How it works</a></li>
-            <li><a href="#" class="notification_nav">
+            <li><a href="#" class="notification_nav" role="button" data-toggle="dropdown" aria-expanded="false">
               <span class="notification_count">2</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="23.217" height="27.063" viewBox="0 0 23.217 27.063">
-              <path id="notifcations" d="M86.564,50.685l-.3-.358c-1.329-1.607-2.133-2.578-2.133-7.128a9.229,9.229,0,0,0-1.675-5.739,7.882,7.882,0,0,0-3.386-2.484.181.181,0,0,1-.05-.04,3.653,3.653,0,0,0-7.163,0,.189.189,0,0,1-.049.039c-3.406,1.4-5.061,4.092-5.061,8.224,0,4.552-.8,5.523-2.133,7.128-.1.117-.2.235-.3.358a2.124,2.124,0,0,0-.281,2.273,2.258,2.258,0,0,0,2.074,1.273h18.66a2.254,2.254,0,0,0,2.065-1.269A2.125,2.125,0,0,0,86.564,50.685Zm-11.12,8.378A4.836,4.836,0,0,0,79.7,56.518a.242.242,0,0,0-.214-.355H71.4a.242.242,0,0,0-.214.355A4.836,4.836,0,0,0,75.444,59.063Z" transform="translate(-63.835 -32)" fill="#d97333"/>
-            </svg>
-            </a></li>
+              <i class="icon-bell"></i>
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+            </li>
           </ul>
         </div>
       </div>
       <div class="user_profile">
-        <spna  class="d-flex link-body-emphasis text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-expanded="false" >
+        <spna  class="d-flex link-body-emphasis text-decoration-none" role="button" data-toggle="dropdown" aria-expanded="false" >
           <img src="./images/user-img.png" alt="mdo" width="50" height="50" class="rounded-circle">
           <div class="user-content text-start">
           <span>Anthony Smith</span>
@@ -134,7 +139,7 @@
   </div>
 
   <!-- Title Section Start -->
-  <div class="page_title_section">
+  <div class="page_title_section dashbord_title">
     <div class="page_header">
       <div class="container">
         <div class="row">
@@ -159,7 +164,7 @@
   <section class="dashboard_inner_content">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-xl-3 col-lg-4 ">
           <div class="left_menu" id="left_menu">
             <div class="close_menu" id="close-icon"><i class="uil uil-times"></i></div>
             <div class="feature_box text-center border-bottom-0">
@@ -175,65 +180,57 @@
             </div>
             <div class="feature_box pt-0">
               <ul class="menu-list" id="drop_menu">
-                <li><a class="link" href="#"><i class="fas fa-tachometer-alt"></i></i> Dashboard</a></li>
-                <li><a class="link" href="#"><i class="fas fa-edit"></i> Profile</a></li>
+                <li><a class="link" href="#"><i class="icon-dashboard"></i> Dashboard</a></li>
+                <li><a class="link" href="#"><i class="icon-profile"></i> Profile</a></li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-suitcase"></i> Memberships</span>
+                  <span class="link drop_link"><i class="icon-membership"></i></i> Memberships</span>
                   <ul class="submenu dropdown-menu">
                     <li><a class="dropdown-item" href="#">Membership Plans</a></li>
                     <li><a class="dropdown-item" href="#">Members</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-tag"></i> Events</span>
+                  <span class="link drop_link"><i class="icon-events"></i> Events</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Add New Event</a></li>
                     <li><a class="dropdown-item" href="#">All Events</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-
-                  <span class="link drop_link"><i class="fas fa-envelope"></i> Club/Shop</span>
+  
+                  <span class="link drop_link"><i class="icon-shop"></i> Club/Shop</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Add New Club</a></li>
                     <li><a class="dropdown-item" href="#">All Club</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-city"></i> Facility</span>
+                  <span class="link drop_link"><i class="icon-facility"></i> Facility</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">All Facility</a></li>
                   </ul>
                 </li>
-                <!-- <li class="dropdown">
-                <span class="link drop_link" ><i class="fas fa-chart-bar"></i> Finance</span>
-                <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                </ul>
-              </li> -->
                 <li class="dropdown">
-                  <span class="link drop_link"><i class="fas fa-globe"></i> Web Pages</span>
+                  <span class="link drop_link"><i class="icon-file"></i> Web Pages</span>
                   <ul class="submenu dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="#">Home</a></li>
                     <li><a class="dropdown-item" href="#">About us</a></li>
                     <li><a class="dropdown-item" href="#">Pricing</a></li>
                   </ul>
                 </li>
-                <li><a class="link" href="#"><i class="fas fa-building"></i> Company Preview</a></li>
+                <li><a class="link" href="#"><i class="icon-company"></i> Company Preview</a></li>
               </ul>
             </div>
             <div class="feature_box border-bottom-0">
               <ul class="menu-list">
-                <li><a href="#"><i class="fas fa-key"></i> Change Password</a></li>
-                <li><a href="#"><i class="fas fa-power-off"></i> Log out</a></li>
-                <li><a href="#"><i class="fas fa-trash-alt"></i> Delete Account</a></li>
+                <li><a href="#"><i class="icon-key"></i> Change Password</a></li>
+                <li><a href="#"><i class="icon-power-off"></i> Log out</a></li>
+                <li><a href="#"><i class="icon-delete"></i> Delete Account</a></li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col-xl-9 col-lg-8">
           <div class="right_menu">
             <div class="feature_box d-block membership_plan_list">
                 <div class="title_div d-flex align-items-center justify-content-between mb-20">
@@ -242,10 +239,10 @@
                       <span>6 Membership Plans</span>
                     </div>
                     <div class="add_new">
-                      <div class="button_div"><a class="btn mr-1" href="#"><img src="./images/icon/membership_add_new.svg" alt="icon"> Add New Plan</a></div>
+                      <div class="button_div"><a class="btn mr-1" href="#"><i class="icon-membership"></i> Add New Plan</a></div>
                       <div class="search_div">
-                          <input type="text">
-                          <i class="uil uil-search"></i>
+                          <input type="text" placeholder="Search">
+                          <i class="icon-search"></i>
                       </div>
                     </div>
                 </div>
@@ -340,7 +337,7 @@
                     </li>
                     
                 </ul>
-                <p class="upgrade_note"><span>You have reached the limit of your total membership creation.</span> Upgrade to create more</p>
+                <p class="upgrade_note"><span>You have reached the limit of your total membership creation.</span> <a class="link">Upgrade to create more</a></p>
             </div>
           </div>
         </div>
