--- a/shop-details.html
+++ b/shop-details.html
@@ -120,23 +120,25 @@
         <div class="feature_box">
             <div class="row">
                 <div class="col-lg-6">
-                    <div id='lens'></div>
-
-<div id='slideshow-items-container'>
-
-  <img class='slideshow-items active' src='https://images.unsplash.com/photo-1512054502232-10a0a035d672?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
-  <img class='slideshow-items' src='https://images.unsplash.com/photo-1539341029274-a659646db47c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
-  <img class='slideshow-items' src='https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
-
-</div>
-
-<div id='result'></div>
-
-<div class='row'>
-  <img class='slideshow-thumbnails active' src='https://images.unsplash.com/photo-1512054502232-10a0a035d672?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=100&q=80'>
-  <img class='slideshow-thumbnails' src='https://images.unsplash.com/photo-1539341029274-a659646db47c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=100&q=80'>
-  <img class='slideshow-thumbnails' src='https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=100&q=80'>
-</div>
+                    <div class="wrapper">
+                        <div class="img-selection">
+                          <div class="img-thumbnail selected">
+                            <img src="./images/image-1.jpg" width="100%">
+                          </div>
+                          <div class="img-thumbnail">
+                            <img src="./images/image-2.jpg" width="100%">
+                          </div>
+                          <div class="img-thumbnail">
+                            <img src="./images/image-3.jpg" width="100%">
+                          </div>
+                          <div class="img-thumbnail">
+                            <img src="./images/image-4.jpg" width="100%">
+                          </div>
+                        </div>
+                        <div class="big-img">
+                            <img src="./images/image-1.jpg" class="display-img">
+                        </div>
+                      </div>
 
                 </div>
                 <div class="col-lg-6">
@@ -301,8 +303,8 @@
     </div>
   </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script> 
 <script src="js/modernizr.js"></script> 
 <script src="js/jquery.menu-aim.js"></script> 
 <script src="js/plugin.js"></script> 
@@ -312,5 +314,47 @@
 <script src="js/jquery.nice-select.min.js"></script> 
 <script src="js/isotope.pkgd.min.js"></script> 
 <script src="js/custom.js"></script>
+      <script>
+        var thumbs = $('.img-selection').find('img');
+
+            thumbs.click(function(){
+            var src = $(this).attr('src');
+            var dp = $('.display-img');
+            var img = $('.zoom');
+            dp.attr('src', src);
+            img.attr('src', src);
+            });
+
+            $(".img-thumbnail").click(function(){
+            $('.img-thumbnail').removeClass('selected');
+            $(this).addClass('selected');
+            });
+
+            var zoom = $('.big-img').find('img').attr('src');
+            $('.big-img').append('<img class="zoom" src="'+zoom+'">');
+            $('.big-img').mouseenter(function(){
+            $(this).mousemove(function(event){
+                var offset = $(this).offset();
+                var left = event.pageX - offset.left;
+                var top = event.pageY - offset.top;
+                
+                $(this).find('.zoom').css({
+                width: '200%',
+                opacity: 1,
+                left: -left,
+                top: -top,
+                });
+            });
+            });
+
+            $('.big-img').mouseleave(function(){
+            $(this).find('.zoom').css({
+                width: '100%',
+                opacity: 0,
+                left: 0,
+                top: 0,
+            });
+            });
+      </script>
 </body>
 </html>
